--- a/test_platformer/assets/bblevels.yaml
+++ b/test_platformer/assets/bblevels.yaml
@@ -1,6 +1,14 @@
 1:
   tile: [0, 0]
   desc: [28,1,112,0,1,1,0,0,0,18,1,0,0,0,1,1,112,0,1,1,0,0,0,18,1,0,0,0,1,1,112,0,1,1,0,0,0,18,1,0,0,0,1,1,224,0,28,1]
+  bubble: [
+    [0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+    [0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+    [0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+    [0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+    [0,0,0,0,0,0,0,0,0,0,0,0,0,0],
+    [1,1,1,1,1,1,1,1,1,1,1,1,1,1]
+  ]
   pal: 0
 2:
   tile: [1,0]
