--- a/bubble/assets/bubble.yaml
+++ b/bubble/assets/bubble.yaml
@@ -1,6 +1,61 @@
 sheet: 'bubble.png'
 tile_size: [8, 8]
+fonts:
+  main:
+    line_height: 8
+    chars: #x,y,w,h,advance
+      0: [216,168,8,8,8]
+      1: [224,168,8,8,8]
+      2: [232,168,8,8,8]
+      3: [240,168,8,8,8]
+      4: [248,168,8,8,8]
+      5: [112,176,8,8,8]
+      6: [120,176,8,8,8]
+      7: [128,176,8,8,8]
+      8: [136,176,8,8,8]
+      9: [144,176,8,8,8]
+      A: [112,160,8,8,8]
+      B: [120,160,8,8,8]
+      C: [128,160,8,8,8]
+      D: [136,160,8,8,8]
+      E: [144,160,8,8,8]
+      F: [152,160,8,8,8]
+      G: [160,160,8,8,8]
+      H: [168,160,8,8,8]
+      I: [176,160,8,8,8]
+      J: [184,160,8,8,8]
+      K: [192,160,8,8,8]
+      L: [200,160,8,8,8]
+      M: [208,160,8,8,8]
+      N: [216,160,8,8,8]
+      O: [224,160,8,8,8]
+      P: [232,160,8,8,8]
+      Q: [240,160,8,8,8]
+      R: [248,160,8,8,8]
+      S: [112,168,8,8,8]
+      T: [120,168,8,8,8]
+      U: [128,168,8,8,8]
+      V: [136,168,8,8,8]
+      W: [144,168,8,8,8]
+      X: [152,168,8,8,8]
+      Y: [160,168,8,8,8]
+      Z: [168,168,8,8,8]
+      '.': [176,168,8,8,8]
+      '!': [184,168,8,8,8]
+      '"': [192,168,8,8,8]
+      ',': [200,168,8,8,8]
+      "'": [208,168,8,8,8]
+      '=': [152,176,8,8,8]
+      '@': [160,176,8,8,8]
 palettes:
+  txt_yellow:
+    ffffff: ffff46
+  txt_red:
+    ffffff: af3c58
+  txt_green:
+    ffffff: 62d532
+  txt_cyan:
+    ffffff: 7ef3d6
   brown:
     af3c58: b7631e
   angry_zenchan:
@@ -8,6 +63,11 @@ palettes:
     ffffff: ffffff
     000000: 000000
     949494: ee7b95
+  dead_zenchan:
+    af3c58: af3c58
+    ffffff: ffffff
+    000000: 000000
+    949494: 7385ff
 sprites:
   bubble:
     animations:
@@ -42,6 +102,18 @@ sprites:
             anchor: [14,0]
           - tex: [42,238,20,18]
             anchor: [14,0]
+  banana:
+    animations:
+      default:
+        frames:
+          - tex: [160,192,16,16]
+            anchor: [8,0]
+  zenchan_dead:
+    animations:
+      default:
+        frames:
+          - tex: [19,192,18,16]
+            anchor: [9,8]
   zenchan_bubble:
     animations:
       default:
