--- a/smb/assets/tiles.yaml
+++ b/smb/assets/tiles.yaml
@@ -67,6 +67,8 @@ fonts:
       '!': [88,16,8,8,8]
       ' ': [32,16,8,8,8]
       '-': [64,16,8,8,8]
+models:
+  0: 'T35;REP8;T134;LOOP;Th35;UP;T-1,35,134,36,134,134,36,134,h35;UP;T-1,-1,35,134,134,134,134,h35;UP;T-1,-1,-1,35,134,36,h35;UP;T-1,-1,-1,-1,37,h37;'
 art:
   pipe: 'rep,[2*height],38,0,39,0,6,2,40,0,b,loop,38,2,39,2,40,2,41,2,b,38,1,39,1,40,1,41,1'
   bush: 'pal,4,32,1,rep,[2*x0],33,1,loop,34,1,b,-1,rep,[x0],33,0,34,0,loop,-1'
