--- a/smb/assets/worlds.yaml
+++ b/smb/assets/worlds.yaml
@@ -11,6 +11,8 @@ define:
   items:
     - { type: Platform, quad: *block, pos: [0, 0], size: [69, 2]}
     - { type: Platform, quad: *block, pos: [71, -0.5], size: [16, 2]}
+    - {type: Tiled, pos: [4,4], model: 0}
+    - { type: Tiled, pos: [ 10,4 ], model: 0 }
 
 1-1b:
   bg_color: [0, 0, 0]
@@ -31,15 +33,16 @@ define:
       loc: [4, 5, 5, 5, 6, 5, 7, 5, 8, 5, 9, 5, 10, 5,
             4, 7, 5, 7, 6, 7, 7, 7, 8, 7, 9, 7, 10, 7,
             5, 9, 6, 9, 7, 9, 8, 9, 9, 9]
-    - type: tiled
-      tiled: 'tiles/pipeh'
-      solid: [4,2]
-      args:
-        width: 1
-      loc: [13,2]
-    - type: tiled
-      tiled: 'tiles/pipeh2'
-      solid: [1,9]
-      args:
-        height: 9
-      loc: [15,4]
+
+#    - type: tiled
+#      tiled: 'tiles/pipeh'
+#      solid: [4,2]
+#      args:
+#        width: 1
+#      loc: [13,2]
+#    - type: tiled
+#      tiled: 'tiles/pipeh2'
+#      solid: [1,9]
+#      args:
+#        height: 9
+#      loc: [15,4]
