--- a/smb/assets/worlds.yaml
+++ b/smb/assets/worlds.yaml
@@ -9,11 +9,18 @@ define:
   start_positions:
     - [3, 5]
   items:
-    - { type: Platform, quad: *block, pos: [0, 0], size: [69, 2]}
-    - { type: Platform, quad: *block, pos: [71, -0.5], size: [16, 2]}
-    - {type: Tiled, pos: [4,4], model: 0}
-    - { type: Tiled, pos: [ 10,4 ], model: 0 }
+    - { type: Tiled, pos: [-1, 0], size: [ 1,20 ] }
 
+    - { type: Tiled, quad: *block, pos: [0, -0.5], size: [69,2]}
+    - { type: Tiled, quad: *block, pos: [71, -0.5], size: [16, 2]}
+    #- { type: Tiled, quad: *block, pos: [3, 3], size: [ 3,1 ] }
+
+    - { type: Tiled, pos: [4,4], tiled: 0}
+    - { type: Tiled, pos: [ 10,4 ], tiled: 0 }
+    - { type: Tiled, pos: [ 1,8 ], atiled: 0, sheet: ui}
+    #- { type: Tiled, pos: [ 3, 3], atiled: 1, size: [1, 1], canMove: True}
+    - { type: Brick, pos: [3,3]}
+    - { type: Goomba, pos: [4, 4.1]}
 1-1b:
   bg_color: [0, 0, 0]
   size: [256, 240]
