--- a/smb/assets/worlds.yaml
+++ b/smb/assets/worlds.yaml
@@ -15,11 +15,13 @@ define:
     - { type: Tiled, quad: *block, pos: [71, -0.5], size: [16, 2]}
     #- { type: Tiled, quad: *block, pos: [3, 3], size: [ 3,1 ] }
 
-    - { type: Tiled, pos: [4,4], tiled: 0}
+    - { type: Tiled, pos: [4,4], z: -1, tiled: 0}
     - { type: Tiled, pos: [ 10,4 ], tiled: 0 }
     - { type: Tiled, pos: [ 1,8 ], atiled: 0, sheet: ui}
     #- { type: Tiled, pos: [ 3, 3], atiled: 1, size: [1, 1], canMove: True}
-    - { type: Brick, pos: [3,3]}
+    - { type: PrizeBrick, pos: [3, 3], callback: generateCoin}
+    - { type: PrizeBrick, pos: [5,5], callback: generateBonus}
+    - { type: Brick, pos: [7, 5]}
     - { type: Goomba, pos: [4, 4.1]}
 1-1b:
   bg_color: [0, 0, 0]
