--- a/smb/assets/worlds.yaml
+++ b/smb/assets/worlds.yaml
@@ -4,20 +4,20 @@ define:
   - &brick [368,0,16,16]
 1-1:
   bg_color: [0, 0, 64]
-  size: [3584, 240]
+  size: [3584, 224]
   name: '1-1'
   start_positions:
     - [3, 5]
   items:
+    # left boundary
     - { type: Tiled, pos: [-1, 0], size: [ 1,20 ] }
-
     - { type: Tiled, quad: *block, pos: [0, -0.5], size: [69,2]}
     - { type: Tiled, quad: *block, pos: [71, -0.5], size: [16, 2]}
     #- { type: Tiled, quad: *block, pos: [3, 3], size: [ 3,1 ] }
 
-    - { type: Tiled, pos: [4,4], z: -1, tiled: 0}
-    - { type: Tiled, pos: [ 10,4 ], tiled: 0 }
-    - { type: Tiled, pos: [ 1,8 ], atiled: 0, sheet: ui}
+    #- { type: Tiled, pos: [4,4], z: -1, tiled: 0}
+    #- { type: Tiled, pos: [ 10,4 ], tiled: 0 }
+    #- { type: Tiled, pos: [ 1,8 ], atiled: 0, sheet: ui}
     #- { type: Tiled, pos: [ 3, 3], atiled: 1, size: [1, 1], canMove: True}
     - { type: PrizeBrick, pos: [3, 3], callback: generateCoin}
     - { type: PrizeBrick, pos: [5,5], callback: generateBonus}
