--- a/smb/assets/tiles.yaml
+++ b/smb/assets/tiles.yaml
@@ -69,6 +69,8 @@ fonts:
       '-': [64,16,8,8,8]
 models:
   0: 'T35;REP8;T134;LOOP;Th35;UP;T-1,35,134,36,134,134,36,134,h35;UP;T-1,-1,35,134,134,134,134,h35;UP;T-1,-1,-1,35,134,36,h35;UP;T-1,-1,-1,-1,37,h37;'
+  1: 'REP{h-2};T38,39,134,40;UP;LOOP;T166,167,168,169;UP;T102,103,104,105'
+  2: 'T488,489,490,491,300,134;UP;T424,425,426,427,300,134;UP;T360,361,362,363,300,134;UP;T296,297,298,299,300,134;UP;REP18;T-1,-1,-1,301,300,134;UP;LOOP'
 animated_tiles:
   0:
     size: [1,1]
