--- a/smb/assets/tiles.yaml
+++ b/smb/assets/tiles.yaml
@@ -22,6 +22,8 @@ palettes:
     fc9838: fc9838
     d82800: 00a800
     fcfcfc: fcfcfc
+  7:
+    fcfcfc: 80d010
 fonts:
   mario:
     line_height: 8
@@ -71,6 +73,10 @@ models:
   0: 'T35;REP8;T134;LOOP;Th35;UP;T-1,35,134,36,134,134,36,134,h35;UP;T-1,-1,35,134,134,134,134,h35;UP;T-1,-1,-1,35,134,36,h35;UP;T-1,-1,-1,-1,37,h37;'
   1: 'REP{h-2};T38,39,134,40;UP;LOOP;T166,167,168,169;UP;T102,103,104,105'
   2: 'T488,489,490,491,300,134;UP;T424,425,426,427,300,134;UP;T360,361,362,363,300,134;UP;T296,297,298,299,300,134;UP;REP18;T-1,-1,-1,301,300,134;UP;LOOP'
+  3: 'PAL7;T96;REP{2*l};T97;LOOP;T98;UP;T-1;REP{l};T33,34;LOOP'
+  4: 'T35,134,134,134,134,h35;UP;T-1,35,134,36,h35;UP;T-1,-1,37,h37;'
+  5: 'REP3;T46,46,46,46,135,135,46,46,46,46;UP;LOOP;T46,46,46,46,302,303,46,46,46,46;UP;REP10;T46;LOOP;UP;T364,365,366,367,366,367,366,367,364,365;UP;REP2;T-1,-1,46,135,46,46,135,46,-1,-1;UP;LOOP;T-1,-1,46,46,46,46,46,46,-1,-1;UP;T-1,-1,364,365,364,365,364,365,-1,-1'
+
 animated_tiles:
   0:
     size: [1,1]
