--- a/smb/assets/worlds.yaml
+++ b/smb/assets/worlds.yaml
@@ -7,7 +7,9 @@ define:
   size: [3584, 224]
   name: '1-1'
   start_positions:
-    - [1, 5]
+    - pos: [1, 2.1]
+    - pos: [180, -0.4]
+      on_start: w1
   items:
     # left boundary
     - { type: Tiled, pos: [-1, 0], size: [ 1,20 ] }
@@ -32,14 +34,18 @@ define:
         155, 4.5, 198, 1.5]}
     #- { type: Tiled, quad: *block, pos: [3, 3], size: [ 3,1 ] }
     # pipes
-    - {type: Tiled, tiled: 1, t_args: {'h': 4}, multi: [28,1.5,163,1.5,179,1.5], size: [2,2]}
+    - {type: Tiled, tiled: 1, t_args: {'h': 4}, multi: [28,1.5,163,1.5,179,1.5], size: [2,2], z: 2}
     - {type: Tiled, tiled: 1, t_args: {'h': 6}, pos: [38,1.5], size: [2,3]}
     - {type: Tiled, tiled: 1, t_args: { 'h': 8 }, multi: [46,1.5,57,1.5 ], size: [ 2,4 ], z: 2 }
-    - {type: HotSpot, pos: [58,5.5], warp: 1-1b}
-
-    #- { type: Tiled, pos: [4,4], z: -1, tiled: 0}
+    - {type: HotSpot, pos: [58,5.5], warp: ['1-1b', 0] }
+    # background items
+    - { type: Tiled, multi: [0,1.5,48,1.5,96,1.5,144,1.5,192,1.5], z: -1, tiled: 0}
+    - { type: Tiled, tiled: 4, multi: [16,1.5,64,1.5,112,1.5,160,1.5,208,1.5]}
+    - { type: Tiled, tiled: 3, t_args: {'l': 3}, multi: [11.5,1.5,59.5,1.5,107.5,1.5,155.5,1.5,203.5]}
+    - { type: Tiled, tiled: 3, t_args: {'l': 2}, multi: [41.5,1.5,89.5,1.5,137.5,1.5,185.5,1.5]}
+    - { type: Tiled, tiled: 3, t_args: {'l': 1}, multi: [23.5,1.5,71.5,1.5,119.5,1.5,167.5,1.5,215.5,1.5]}
+    - { type: Tiled, tiled: 5, pos: [202,1.5]}
     #- { type: Tiled, pos: [ 10,4 ], tiled: 0 }
-    #- { type: Tiled, pos: [ 1,8 ], atiled: 0, sheet: ui}
     #- { type: Tiled, pos: [ 3, 3], atiled: 1, size: [1, 1], canMove: True}
     - { type: PrizeBrick, pos: [3, 3], callback: generateCoin}
     - { type: PrizeBrick, pos: [5,5], callback: generateBonus}
@@ -51,7 +57,7 @@ define:
   size: [256, 224]
   name: '1-1'
   start_positions:
-    - [2, 10]
+    - pos: [2, 10]
   items:
     - { type: Tiled, quad: *block, pal: 5, pos: [ 0, -0.5 ], size: [ 69,2 ] }
     - { type: Tiled, quad: *brick, pal: 5, pos: [0, 1.5], size: [1, 11]}
@@ -63,7 +69,7 @@ define:
     - { type: Tiled, tiled: 2, pos: [13, 1.5], z: 2}
     - { type: Tiled, pos: [14.5, 0], size: [ 2,12.5 ] }
     - { type: Line, pos: [13,3.5], width: 334}
-    - {type: HotSpot, pos: [13,1.5], warp: 1-1, tag: 9}
+    - {type: HotSpot, pos: [13,1.5], warp: ['1-1', 1], tag: 9}
 
 #
 #    - type: platform
