--- a/kq_1/assets/assets.yaml
+++ b/kq_1/assets/assets.yaml
@@ -1,6 +1,98 @@
+textures:
+  0: kq1.png
+  1: start.png
+fonts:
+  sierra:
+    tex: 0
+    height: 8
+    chars: #x,y,w,h,advance
+      0: [232,208,8,8,8]
+      1: [160,208,8,8,8]
+      2: [168,208,8,8,8]
+      3: [176,208,8,8,8]
+      4: [184,208,8,8,8]
+      5: [192,208,8,8,8]
+      6: [200,208,8,8,8]
+      7: [208,208,8,8,8]
+      8: [216,208,8,8,8]
+      9: [224,208,8,8,8]
+      A: [208,200,8,8,8]
+      B: [216,200,8,8,8]
+      C: [224,200,8,8,8]
+      D: [232,200,8,8,8]
+      E: [240,200,8,8,8]
+      F: [248,200,8,8,8]
+      G: [0,208,8,8,8]
+      H: [8,208,8,8,8]
+      I: [16,208,8,8,8]
+      J: [24,208,8,8,8]
+      K: [32,208,8,8,8]
+      L: [40,208,8,8,8]
+      M: [48,208,8,8,8]
+      N: [56,208,8,8,8]
+      O: [64,208,8,8,8]
+      P: [72,208,8,8,8]
+      Q: [80,208,8,8,8]
+      R: [88,208,8,8,8]
+      S: [96,208,8,8,8]
+      T: [104,208,8,8,8]
+      U: [112,208,8,8,8]
+      V: [120,208,8,8,8]
+      W: [128,208,8,8,8]
+      X: [136,208,8,8,8]
+      Y: [144,208,8,8,8]
+      Z: [152,208,8,8,8]
+      a: [0, 200, 8, 8, 8]
+      b: [8, 200, 8, 8, 8]
+      c: [16, 200, 8, 8, 8]
+      d: [24, 200, 8, 8, 8]
+      e: [32, 200, 8, 8, 8]
+      f: [40, 200, 8, 8, 8]
+      g: [48, 200, 8, 8, 8]
+      h: [56, 200, 8, 8, 8]
+      i: [64, 200, 8, 8, 8]
+      j: [72, 200, 8, 8, 8]
+      k: [80, 200, 8, 8, 8]
+      l: [88, 200, 8, 8, 8]
+      m: [96, 200, 8, 8, 8]
+      n: [104, 200, 8, 8, 8]
+      o: [112, 200, 8, 8, 8]
+      p: [120, 200, 8, 8, 8]
+      q: [128, 200, 8, 8, 8]
+      r: [136, 200, 8, 8, 8]
+      s: [144, 200, 8, 8, 8]
+      t: [152, 200, 8, 8, 8]
+      u: [160, 200, 8, 8, 8]
+      v: [168, 200, 8, 8, 8]
+      w: [176, 200, 8, 8, 8]
+      x: [184, 200, 8, 8, 8]
+      y: [192, 200, 8, 8, 8]
+      z: [200, 200, 8, 8, 8]
+      '*': [32, 216,8,8,8]
+      '!': [200,216,8,8,8]
+      ' ': [240,208,8,8,8]
+      '?': [192,216,8,8,8]
+      ',': [152,216,8,8,8]
+      '.': [168,216,8,8,8]
+      "'": [128,216,8,8,8]
+      ':': [112,216,8,8,8]
+      ';': [104,216,8,8,8]
+      '>': [176,216,8,8,8]
+      '_': [56,216,8,8,8]
+      '-': [208,216,8,8,8]
+      '"': [120,216,8,8,8]
+      '(': [40,216,8,8,8]
+      ')': [48,216,8,8,8]
 sprites:
+  cursor:
+    tex: 0
+    data: [34,53,11,16,5,8,
+      46,53,12,9,6,5]
+    animations:
+      walk: [0]
+      look: [1]
   graham:
-    file: kq1.png
+    tex: 0
     data: [
       106, 1, 12, 32, 7, 0,     # graham idle left
       119, 1, 10, 31, 5, 0,
@@ -20,6 +112,7 @@ sprites:
       142, 35, 10, 32, 5, 0,
       154, 36, 10, 31, 5, 0,
       166, 36, 10, 31, 5, 0]
+    ticks: 10
     animations:
       idle-e: [0]
       idle-s: [8]
@@ -28,7 +121,8 @@ sprites:
       walk-s: [6,7,8,9,10,11]
       walk-n: [12,13,14,15,16,17]
   alligator:
-    file: kq1.png
+    tex: 0
+    ticks: 10
     data: [
       75,23,26,4,8,0,
       75,1,26,8,8,0,
@@ -36,15 +130,50 @@ sprites:
     ]
     animations:
       walk: [0,1,2,1]
+      # alias for walk
+      walk-e:
+      walk-s:
+      walk-n:
+      idle-e:
+      idle-s:
+      idle-n:
+#  bg1:
+#    tex: 1
+#    data: [0, 0, 316, 166, 0, 0]
+#    animations:
+#      b: [0]
+quads:
+  bg1: {'tex': 1, data: [0, 0, 316, 166, 0, 0]}
+  tree_0: {'tex': 1, data: [86,167,118,127,0,0]}
+    
+nodes:
+  tree_0000:
+    quad: [1, 86, 167, 118, 127, 0, 0]
+    geo: ['poly', 68, 0, 84, 0, 84, 2, 68, 2]
 
-  bg:
-    file: start.png
-    data: [0, 0, 316, 166, 0, 0]
-    animations:
-      default: [0]
-  tree_castle:
-    file: start.png
-    data: [86, 167, 118, 127]
-    animations:
-      default: [0]
 
+
+
+#  tree_castle:
+#    file: start.png
+#    data: [86, 167, 118, 127, 0, 0]
+#    geometry:
+#      poly: [68,0,84,0,84,2,68,2]
+#      hole: 1
+#      depth: 1
+#  tree_castle2:
+#    file: start.png
+#    data: [318, 2, 118, 127, 0, 0]
+#    geometry:
+#      poly: [68,0,84,0,84,2,68,2]
+#      hole: 1
+#      depth: 1
+#  prova:
+#    file: start.png
+#    data: [19,314,52,79]
+#    geometry:
+#      lines: [0,0,52,52]
+#      hole: 1
+#      depth: 1
+#    animations:
+#      default: [0]
