--- a/kq_1/assets/assets.yaml
+++ b/kq_1/assets/assets.yaml
@@ -1,6 +1,7 @@
 textures:
   0: kq1.png
   1: start.png
+  2: gardene.png
 fonts:
   sierra:
     tex: 0
@@ -91,6 +92,39 @@ sprites:
     animations:
       walk: [0]
       look: [1]
+  flag1:
+    tex: 0
+    data: [
+      1,1,24,9,0,0,
+      1,11,22,9,0,0,
+      1,21,20,9,0,0,
+      1,31,22,9,0,0,
+      1,41,22,9,0,0
+    ]
+    animations:
+      default: [0,1,2,3,4]
+  flag2:
+    tex: 0
+    data: [
+      26,1,24,9,0,0,
+      26,11,22,9,0,0,
+      26,21,22,9,0,0,
+      26,31,22,9,0,0,
+      26,41,24,9,0,0
+    ]
+    animations:
+      default: [0,1,2,3,4]
+  flag3:
+    tex: 0
+    data: [
+      51,1,22,9,0,0,
+      51,11,22,9,0,0,
+      51,21,22,9,0,0,
+      51,31,22,9,0,0,
+      52,41,24,9,0,0
+    ]
+    animations:
+      default: [0,1,2,3,4]
   graham:
     tex: 0
     data: [
@@ -111,7 +145,16 @@ sprites:
       130, 36, 10, 31, 5, 0,
       142, 35, 10, 32, 5, 0,
       154, 36, 10, 31, 5, 0,
-      166, 36, 10, 31, 5, 0]
+      166, 36, 10, 31, 5, 0,
+      182, 2, 36, 10, 15, 3,    # drown
+      182, 13, 38, 15, 17, 5,
+      182, 29, 38, 15, 17, 5,
+      182, 45, 30, 12, 15, 4,
+      182, 58, 32, 10, 15, 4,
+      182, 69, 38, 12, 17, 5,
+      182, 82, 32, 12, 15, 3,
+      182, 95, 34, 11, 15, 3,
+      182, 107, 38, 11, 15, 5]
     ticks: 10
     animations:
       idle-e: [0]
@@ -120,6 +163,7 @@ sprites:
       walk-e: [0,1,2,3,4,5]
       walk-s: [6,7,8,9,10,11]
       walk-n: [12,13,14,15,16,17]
+      drown: [18,19,20,21,22,23,24,25]
   alligator:
     tex: 0
     ticks: 10
@@ -144,12 +188,16 @@ sprites:
 #      b: [0]
 quads:
   bg1: {'tex': 1, data: [0, 0, 316, 166, 0, 0]}
+  bg2: {'tex': 2, data: [0,0,316,166,0,0] }
   tree_0: {'tex': 1, data: [86,167,118,127,0,0]}
-    
-nodes:
-  tree_0000:
-    quad: [1, 86, 167, 118, 127, 0, 0]
-    geo: ['poly', 68, 0, 84, 0, 84, 2, 68, 2]
+  castle_0: {'tex': 1, data: [208,167,70,137,0,0]}
+  wall_garden_east: {'tex': 2, data: [1,170,300,89,0,0]}
+#nodes:
+#  tree_0000:
+#    quad: [1, 86, 167, 118, 127, 0, 0]
+#    geo: ['poly', 68, 0, 84, 0, 84, 2, 68, 2]
+#  castle_00:
+#    quad: [1, 208,167,70,137,0,0]
 
 
 
