--- a/kq_1/assets/strings.yaml
+++ b/kq_1/assets/strings.yaml
@@ -5,3 +5,13 @@ strings:
   3: "Misfortune strikes and you have fallen into the moat. Your struggles and cries have attracted hungry alligators. They do not want to let you go."
   4: "We, at Sierra, wish to thank you for playing King's Quest. We are very sorry that you did not succeed and hope you will fare better next time. Good luck."
   5: "This is the castle of King Edward the Benevolent."
+  6: "This is a neat little carrot patch. The plump carrots look tempting."
+  7: "It is a relatively low, native stone and masonry fence to the right and rear of a garden."
+  8: "That doesn't seem to work."
+  9: "You pluck a delicious looking carrot from the fertile soil."
+  10: "You already have a {x}."
+  11: "This is a well-tended carrot patch. The carrots look tempting to a hungry traveler."
+  12: "This is a relatively low, rustic stone fence which runs along the left and rear sides of the garden."
+  13: "You pluck a plump, orange carrot from the ground."
+  14: "They pose as immovable guards for King Edward's castle, and have frightened off numerous intruders."
+  15: "These doors are strongly built to keep out unwanted visitors."
