--- a/kq_1/assets/rooms.yaml
+++ b/kq_1/assets/rooms.yaml
@@ -1,4 +1,17 @@
 size: &size [316, 166]
+walk_all: &walk_all [0,0,316,0,316,166,0,166]
+#east: &east [311,0,316,0,316,166,311,166]
+
+east: &east
+  poly: [311,0,316,0,316,166,311,166]
+  flag: 2
+  mask: 1
+  tag: goto
+south: &south
+  poly: [0,0,316,0,316,5,0,5]
+  flag: 2
+  mask: 1
+  tag: goto
 items:
   alligator:
     model: main/alligator
@@ -30,8 +43,74 @@ items:
     model: main/wall_garden_east
     depth: 1
     walk: { 'poly': [-1, 72, 161, 72, 282,0,300, 0, 300, 2, 170, 74, -1, 74]}
-      
+    hotspot:
+      id: wall_garden_east
+      actions:
+        look: [ 'message', { 'text': 7 } ]
+  wall_garden_west:
+    model: main/wall_garden_west
+    depth: 1
+    walk: { 'poly': [0,0,20,0,139,72,274,72,274,75,135,75,0,3]}
+    hotspot:
+      id: wall_garden_west
+      actions:
+        look: [ 'message', { 'text': 12 } ]
 rooms:
+  castle_west:
+    size: *size
+    textures: [4]
+    walkareas:
+      - poly: [0,10,20,10,20,0,316,0,316,20,260,20,251,47,203,47,191,20,128,20,149,46,149,130,0,130,0,20]
+    nodes:
+      - pos: [ 0, 0, -1 ]
+        model: main/bg_castle_west
+      - model: main/door_castle           # castle door
+        pos: [210,47,0]
+        hotspot:
+          rect: [40,50]
+          actions:
+            look: ['message', {text: 15}]
+        #anim: open
+      - id: flag-purple
+        pos: [228,148,0]
+      - id: flag-yellow
+        pos: [258,149,0]
+      - id: flag-cyan
+        pos: [288,148,0]
+      - hotspot:
+          rect: [30,30]
+          actions:
+            look: [ 'message', { 'text': 14 } ]
+        pos: [166,50,0]
+      - hotspot:
+          rect: [30,30]
+          actions:
+            look: [ 'message', { 'text': 14 } ]
+        pos: [255,50,0]
+  garden_west:
+    size: *size
+    textures: [3]
+    walkareas:
+      - poly: *walk_all
+    nodes:
+      - pos: [ 0, 0, -1 ]
+        model: main/bg_garden_west
+      - id: wall_garden_west
+        pos: [44,35,0]
+      - hotspot:
+          poly: [86,29,316,29,316,100,194,100]
+          actions:
+            look: [ 'message', { 'text': 11 } ]
+            use: ['take', {'item': 'carrot', 'ok': 13}]
+        depth: 1
+      - collider:
+          *east
+        user_data:
+          room: garden_east
+          x: 10
+          dir: e
+      - collider: *south
+        user_data: { room: castle_west, y: 110, x: 50, dir: s}
   garden_east:
     size: *size
     textures: [2]
@@ -39,9 +118,38 @@ rooms:
       - poly: [0,0,316,0,316,166,0,166]
     nodes:
       - pos: [ 0, 0, -1 ]
-        model: main/bg2
+        model: main/bg_garden_east
+      - pos: [190, 110, -1]
+        model: main/tree_1
+        depth: 1
+        walk: { 'poly': [52, 0, 90, 0, 88,4, 54,4] }
+      - pos: [92, 124, -1]
+        model: main/tree_2
+        depth: 1
+        walk: { 'poly': [30,0,50,0,48,2,32,2] }
       - id: wall_garden_east
         pos: [0,35,0]
+      - hotspot:
+          poly: [0,25,250,25,162,100,0,100]
+          actions:
+            look: [ 'message', { 'text': 6 } ]
+            use: ['take', {'item': 'carrot', 'ok': 9}]
+        depth: 1
+
+
+
+      # south
+      - collider: *south
+        user_data: { room: start, y: 115, x: 200, dir: s}
+      - collider:
+          poly: [0,0,5,0,5,166,0,166]
+          flag: 2
+          mask: 1
+          tag: goto
+        user_data:
+          room: garden_west
+          x: 306
+          dir: w
   start:
     size: *size
     textures: [1]
@@ -106,6 +214,8 @@ rooms:
           tag: goto
         user_data:
           room: garden_east
+          y: 7
+          dir: n
   prova:
     size: *size
     walkareas:
